--- a/.env
+++ b/.env
@@ -24,7 +24,7 @@ LOG_LEVEL=debug
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=php3_asm
+DB_DATABASE=php3_auth_test
 DB_USERNAME=root
 DB_PASSWORD=mysql
 
@@ -48,14 +48,12 @@ REDIS_HOST=127.0.0.1
 REDIS_PASSWORD=null
 REDIS_PORT=6379
 
-MAIL_MAILER=log
-MAIL_SCHEME=null
-MAIL_HOST=127.0.0.1
+# Looking to send emails in production? Check out our Email API/SMTP product!
+MAIL_MAILER=smtp
+MAIL_HOST=sandbox.smtp.mailtrap.io
 MAIL_PORT=2525
-MAIL_USERNAME=null
-MAIL_PASSWORD=null
-MAIL_FROM_ADDRESS="hello@example.com"
-MAIL_FROM_NAME="${APP_NAME}"
+MAIL_USERNAME=6266cdda3137b9
+MAIL_PASSWORD=82305bbe1b8c64
 
 AWS_ACCESS_KEY_ID=
 AWS_SECRET_ACCESS_KEY=
