--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,7 @@
     "require": {
         "php": "^8.2",
         "filament/filament": "^3.3",
-        "laravel/breeze": "^2.3",
+        "laravel/breeze": "*",
         "laravel/framework": "^12.0",
         "laravel/tinker": "^2.10.1"
     },
