create stats admin, filter product, update blog, product page

--- a/.env
+++ b/.env
@@ -3,7 +3,7 @@ APP_ENV=local
 APP_KEY=base64:F0bDnZ6fp3ZA1mSUWjBVKknE+vt4eIuvGPpZCAs2tTY=
 APP_DEBUG=true
 APP_TIMEZONE=Asia/Ho_Chi_Minh
-APP_URL=http://localhost
+APP_URL=http://localhost:8000
 
 APP_LOCALE=vi
 APP_FALLBACK_LOCALE=vi
