SendMail Contact and Search product by name

--- a/.env
+++ b/.env
@@ -49,11 +49,12 @@ REDIS_PASSWORD=null
 REDIS_PORT=6379
 
 # Looking to send emails in production? Check out our Email API/SMTP product!
-MAIL_MAILER=smtp
-MAIL_HOST=sandbox.smtp.mailtrap.io
-MAIL_PORT=2525
-MAIL_USERNAME=6266cdda3137b9
-MAIL_PASSWORD=82305bbe1b8c64
+MAIL_HOST=smtp.gmail.com
+MAIL_PORT=587
+MAIL_USERNAME="linhlove00b@gmail.com"
+MAIL_PASSWORD="z s f n r m q l p z b i m p b d"
+MAIL_FROM_ADDRESS="linhlove00b@gmail.com"
+MAIL_FROM_NAME="Kidol"
 
 AWS_ACCESS_KEY_ID=
 AWS_SECRET_ACCESS_KEY=
