--- a/.env
+++ b/.env
@@ -63,3 +63,10 @@ AWS_BUCKET=
 AWS_USE_PATH_STYLE_ENDPOINT=false
 
 VITE_APP_NAME="${APP_NAME}"
+
+
+MOMO_PARTNER_CODE=MOMOBKUN20180529
+MOMO_ACCESS_KEY=klm05TvNBzhg7h7j
+MOMO_SECRET_KEY=at67qH6mk8w5Y1nAyMoYKMWACiEi2bsa
+MOMO_REDIRECT_URL=http://127.0.0.1:8000/checkout/success
+MOMO_IPN_URL=http://127.0.0.1:8000/checkout/ipn
